--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "node-js-getting-started",
+  "name": "last-straw",
   "version": "0.1.2",
-  "description": "A sample Node.js app using Express 4",
+  "description": "An application illustrating the idiom \"the straw that broke the camel's back\" in real life context in collaboration.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "cool-ascii-faces": "~1.3.x"
   },
   "engines": {
     "node": "0.10.x"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://proustibat@bitbucket.org/proustibat/last-straw.git"
   },
   "keywords": [
     "node",
