--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "jade": "^1.9.2",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5"
   },
   "engines": {
     "node": "0.10.x"
