--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "~4.9.x",
+    "express-partials": "^0.3.0",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5"
   },
