--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.12.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
     "express-partials": "^0.3.0",
+    "method-override": "^2.3.1",
+    "mongoose": "^3.8.24",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5"
   },
@@ -25,8 +37,11 @@
     "node",
     "heroku",
     "express",
-    "jade",
-    "real time app"
+    "ejs",
+    "real time app",
+    "socket",
+    "authentification",
+    "bootstrap"
   ],
   "license": "MIT"
 }
