--- a/package.json
+++ b/package.json
@@ -14,17 +14,7 @@
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "express-partials": "^0.3.0",
-    "method-override": "^2.3.1",
-    "mongoose": "^3.8.24",
-    "morgan": "^1.5.1",
-    "passport": "^0.2.1",
-    "passport-facebook": "^2.0.0",
-    "passport-google-oauth": "^0.2.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.3",
-    "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5"
+    "express-partials": "^0.3.0"
   },
   "engines": {
     "node": "0.10.x"
