--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.12.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "express-partials": "^0.3.0"
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5",
+    "express-partials": "^0.3.0",
+    "passport": "^0.2.1"
   },
   "engines": {
     "node": "0.10.x"
