--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "express-partials": "^0.3.0",
-    "passport": "^0.2.1"
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3"
   },
   "engines": {
     "node": "0.10.x"
