--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.3"
+    "passport-twitter": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.12.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.4",
+    "method-override": "^2.3.1"
   },
   "engines": {
     "node": "0.10.x"
