--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
-    "method-override": "^2.3.1"
+    "method-override": "^2.3.1",
+    "mongoose": "^3.8.24"
   },
   "engines": {
     "node": "0.10.x"
