--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "method-override": "^2.3.1",
-    "mongoose": "^3.8.24"
+    "mongoose": "^3.8.24",
+    "morgan": "^1.5.1"
   },
   "engines": {
     "node": "0.10.x"
