--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "socket.io-client": "^1.3.5",
     "express-partials": "^0.3.0",
     "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
