--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "express-partials": "^0.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
