--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "ejs": "^2.3.1",
-    "express": "~4.9.x",
-    "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5",
-    "express-partials": "^0.3.0",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.3",
-    "passport-facebook": "^2.0.0",
-    "passport-google-oauth": "^0.2.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
+    "ejs": "^2.3.1",
+    "express": "~4.9.x",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.10.3",
     "method-override": "^2.3.1",
     "mongoose": "^3.8.24",
-    "morgan": "^1.5.1"
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5"
   },
   "engines": {
     "node": "0.10.x"
