--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express-partials": "^0.3.0",
     "express-session": "^1.10.3",
     "method-override": "^2.3.1",
-    "mongoose": "^3.8.24",
+    "mongoose": "3.8",
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
     "passport-facebook": "^2.0.0",
